--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -22,13 +22,15 @@ jobs:
     needs: checkIfNew
     runs-on: ubuntu-latest
     steps:
-      - name:
+      - name: Checkout repo
+        uses: actions/checkout@main
 
   siteGen:
     needs: getNew
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
+      - name: Checkout repo
+        uses: actions/checkout@main
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
