--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -2,16 +2,17 @@ name: Update Site
 
 on:
   schedule:
-  - cron: "0 16 * * *"
-    
+    - cron: "0 16 * * *"
+
   workflow_dispatch:
 
 jobs:
   checkIfNew:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@main
+
       - name: Check if metadata has been modified
         run: |
           echo "A little less ${message}"
@@ -25,6 +26,22 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@main
 
+      - name: Download metadata/ and thys/
+        uses: actions/checkout@main
+
+      - name: Overwrite repo files
+        uses: actions/checkout@main
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v5
+        with:
+          author_name: github-actions
+          author_email: 41898282+github-actions[bot]@users.noreply.github.com
+          message: "Update metadata and thys"
+          add: "."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   siteGen:
     needs: getNew
     runs-on: ubuntu-latest
@@ -36,15 +53,20 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-          
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-    
-      - name: Run plot.py
+
+      - name: Set up Hugo
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Generate new site
         run: python plot.py
-        
+
       - name: Commit changes
         uses: EndBug/add-and-commit@v5
         with:
