--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -11,20 +11,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
+        
+      - name: Set up Python 3.8
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+        
+      - name: Check if metadata has been modified
+      - uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
+            import os
+            import sys
+            import requests
+
+            if os.path.isfile("Last-Modified-SHA.txt"):
+                with open(dataDir + "Last-Modified-SHA.txt") as file:
+                    prevLastModifiedSha = file.read()
+            else:
+                prevLastModifiedSha = ""
+                
+            r = requests.head("https://foss.heptapod.net/api/v4/projects/317/repository/files/metadata%2Fmetadata?ref=branch%2Fdefault")
+            lastModifiedSha = r.headers["X-Gitlab-Content-Sha256"]
+
+            if prevLastModifiedSha != lastModifiedSha:
+              sys.exit(1)
 
       - name: Check if metadata has been modified
         run: |
           echo "A little less ${message}"
           echo "A little more action"
           exit 1
-
-  getNew:
-    needs: checkIfNew
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@main
 
       - name: Download metadata/ and thys/
         uses: actions/checkout@main
@@ -41,18 +59,6 @@ jobs:
           add: "."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  siteGen:
-    needs: getNew
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@main
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
 
       - name: Install dependencies
         run: |
