--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Set up Python 3.8
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: 3.8
         
       - name: Check if metadata has been modified
-      - uses: jannekem/run-python-script-action@v1
+        uses: jannekem/run-python-script-action@v1
         with:
           script: |
             import os
