--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  checkIfNew:
+  updateSite:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -17,28 +17,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r .github/requirements.txt
         
       - name: Check if metadata has been modified
-        uses: jannekem/run-python-script-action@v1
-        with:
-          script: |
-            import os
-            import sys
-            import requests
+        run: |
+          cd .github
+          python checkMetadata.py
 
-            if os.path.isfile("Last-Modified-SHA.txt"):
-                with open(dataDir + "Last-Modified-SHA.txt") as file:
-                    prevLastModifiedSha = file.read()
-            else:
-                prevLastModifiedSha = ""
-                
-            r = requests.head("https://foss.heptapod.net/api/v4/projects/317/repository/files/metadata%2Fmetadata?ref=branch%2Fdefault")
-            lastModifiedSha = r.headers["X-Gitlab-Content-Sha256"]
-
-            if prevLastModifiedSha != lastModifiedSha:
-              sys.exit(1)
-
-      - name: Check if metadata has been modified
+      - name: Catch if not caught
         run: |
           echo "A little less ${message}"
           echo "A little more action"
