--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -31,11 +31,11 @@ jobs:
           cd carlinmack.github.io/.github
           python checkMetadata.py
 
-      - name: Checkout private tools
+      - name: Checkout site generation repository
         uses: actions/checkout@v2
         with:
           repository: carlinmack/afp
-          token: ${{ secrets.GitHub_PAT }} # `GitHub_PAT` is a secret that contains your PAT
+          token: ${{ secrets.AFP_PAT }}
           path: afp
 
       - name: Download metadata/ and thys/
