--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -55,8 +55,8 @@ jobs:
           author_name: github-actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: "Update metadata and thys"
-          add: "."
-          cwd: 'afp'
+          branch: "master"
+          cwd: "afp"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -84,9 +84,9 @@ jobs:
         with:
           author_name: github-actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
-          message: "Update plots"
-          add: "-u"
-          cwd: 'carlinmack.github.io'
+          message: "Update site"
+          cwd: "carlinmack.github.io"
+          branch: "main"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
