Change output directory of hugo

--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -76,9 +76,7 @@ jobs:
       - name: Build
         run: |
           cd afp/src/afp-devel/admin/hugo
-          hugo --minify
-          ls /
-          mv afp/src/afp-devel/admin/web carlinmack.github.io
+          hugo --minify --destination ~/carlinmack.github.io/
 
       - name: Reverse SHA
         run: rev .github/Last-Modified-SHA.txt > .github/Last-Modified-SHA.txt
