Fix reverse SHA

--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -79,7 +79,7 @@ jobs:
           hugo --minify --destination ~/carlinmack.github.io/
 
       - name: Reverse SHA
-        run: rev .github/Last-Modified-SHA.txt > .github/Last-Modified-SHA.txt
+        run: rev carlinmack.github.io/.github/Last-Modified-SHA.txt > carlinmack.github.io/.github/Last-Modified-SHA.txt
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v5
