--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Build
         run: |
           cd afp/src/afp-devel/admin/hugo
-          hugo --minify --destination ~/carlinmack.github.io/
+          hugo --minify --destination $GITHUB_WORKSPACE/carlinmack.github.io/
 
       - name: Reverse SHA
         run: rev carlinmack.github.io/.github/Last-Modified-SHA.txt > carlinmack.github.io/.github/Last-Modified-SHA.txt
