--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -6,8 +6,9 @@ on:
 
   workflow_dispatch:
     inputs:
-      description: "Force"
-      default: False
+      force:
+        description: "Force"
+        default: False
 
 jobs:
   updateSite:
