Update default branch of afp repo

--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -68,7 +68,7 @@ jobs:
           author_name: github-actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: "Update metadata and thys"
-          branch: "master"
+          branch: "main"
           cwd: "afp"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
