Fix archive format

--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Download metadata/ and thys/
         run: |
-          wget https://foss.heptapod.net/isa-afp/afp-2021/-/archive/branch/default/afp-2021-branch-default.zip?path=thys -O thys.tar.gz &&
+          wget https://foss.heptapod.net/isa-afp/afp-2021/-/archive/branch/default/afp-2021-branch-default.tar.gz?path=thys -O thys.tar.gz &&
           tar -xf thys.tar.gz
           wget https://foss.heptapod.net/isa-afp/afp-2021/-/raw/branch/default/metadata/metadata
 
