Add dryrun flag

--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -8,7 +8,10 @@ on:
     inputs:
       force:
         description: "Force"
-        default: False
+        default: "False"
+      dryrun:
+        description: "Dry run"
+        default: "False"
 
 jobs:
   updateSite:
@@ -44,12 +47,14 @@ jobs:
           path: afp
 
       - name: Download metadata/ and thys/
+        if: ${{ !(github.event.inputs.dryrun) }}
         run: |
           wget https://foss.heptapod.net/isa-afp/afp-2021/-/archive/branch/default/afp-2021-branch-default.tar.gz?path=thys -O thys.tar.gz &&
           tar -xf thys.tar.gz
           wget https://foss.heptapod.net/isa-afp/afp-2021/-/raw/branch/default/metadata/metadata
 
       - name: Overwrite repo files
+        if: ${{ !(github.event.inputs.dryrun) }}
         run: |
           rm -rf afp/src/afp-devel/thys
           mv afp-2021-branch-default-thys/thys afp/src/afp-devel/
