Fix input boolean

--- a/.github/workflows/updateSite.yml
+++ b/.github/workflows/updateSite.yml
@@ -8,10 +8,10 @@ on:
     inputs:
       force:
         description: "Force"
-        default: "False"
+        default: 'false'
       dryrun:
         description: "Dry run"
-        default: "False"
+        default: 'false'
 
 jobs:
   updateSite:
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Check if metadata has been modified
-        if: ${{ !(github.event.inputs.force) }}
+        if: ${{ github.event.inputs.force == 'false' }}
         run: |
           cd carlinmack.github.io/.github
           python checkMetadata.py
@@ -47,14 +47,14 @@ jobs:
           path: afp
 
       - name: Download metadata/ and thys/
-        if: ${{ !(github.event.inputs.dryrun) }}
+        if: ${{ github.event.inputs.dryrun == 'false' }}
         run: |
           wget https://foss.heptapod.net/isa-afp/afp-2021/-/archive/branch/default/afp-2021-branch-default.tar.gz?path=thys -O thys.tar.gz &&
           tar -xf thys.tar.gz
           wget https://foss.heptapod.net/isa-afp/afp-2021/-/raw/branch/default/metadata/metadata
 
       - name: Overwrite repo files
-        if: ${{ !(github.event.inputs.dryrun) }}
+        if: ${{ github.event.inputs.dryrun == 'false' }}
         run: |
           rm -rf afp/src/afp-devel/thys
           mv afp-2021-branch-default-thys/thys afp/src/afp-devel/
